# MiaRelayStation

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/mia_relay/: __init__.py  auth.py  main.py  registry.py  ws_endpoints.py
tests/: test_auth.py  test_registry.py  test_ws_endpoints.py
windows/: HANDOFF-TO-SERVER-AI.md  README.md
windows/config/: Caddyfile.windows  env.example
windows/scripts/: apply-release.ps1  build-on-server.ps1  common.ps1  install.ps1  status.ps1  uninstall.ps1  upgrade.ps1
windows/service/: .gitkeep  mia-caddy-launcher.cmd  mia-caddy.xml  mia-relay-launcher.cmd  mia-relay.xml
